# test-fullstack-template

./: .envrc  .envrc.example  .gitignore  .mcp.json  CLAUDE.md  DOCKER-TROUBLESHOOTING.md  Makefile  README.md  exclude.txt  firebase.json  firestore.indexes.json  firestore.rules  fllstck-tmplt.code-workspace  netlify.toml  package.json  pnpm-lock.yaml  pubspec.yaml  test-fullstack-template.code-workspace
backend/: .dockerignore  .env.example  .env.template  .gitignore  AUTOMATED_DEPLOYMENT.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.prod  Makefile  README.docker.md  alembic.ini  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 08958dbe6120_make_datetime_columns_timezone_aware.py  12052354c204_add_recurring_todo_fields_and_.py  13678c776b76_.py  1b86ffca0a8d_add_fun_table.py  2dcfee301db7_add_timer_log_field_to_todos.py  3a751bbbbab8_initial_schema.py  3e219e129cc5_add_kind_field_and_todokind_enum_to_.py  49832d434b59_make_user_order_constraint_conditional_.py  5f2ae126a056_add_unique_constraint_on_user_id_and_.py  6133287853b2_add_habit_to_todokind_enum_and_unique_.py  6489c3340586_add_parent_id_to_todos_table.py  658fd905e761_make_annoyingness_non_nullable_with_.py  66017171c47b_initial_schema_with_users_and_todos_.py  7c2832d6b5f4_fix_timeestimate_enum_values.py  846bb0e38268_update_zero_importance_to_one.py  8705427c81e8_change_habitlog_when_field_from_.py  987909532a4e_add_habitlog_model.py  9ea13a584c49_.py  b460478a09be_add_atomic_and_infinitely_divisible_.py  cb0a7b267660_add_committed_field_to_todos_table.py  eb05631fb603_initial_schema.py
backend/app/: database.py  main.py
backend/app/api/: routes.py
backend/app/auth/: __init__.py  dependencies.py  security.py
backend/app/autogenerated/: __init__.py  pydantic_models.py
backend/app/models/: __init__.py  desirability.py  fun.py  note.py  todo.py  user.py
backend/app/routers/: auth.py  funs.py  habits.py  note.py  todos.py  (+2 more)
backend/docs/: DOCKER_CREDENTIALS.md
backend/scripts/: README.md  replace-local-db-with-prod.sh  replace-prod-db-with-local.sh  reset-user-password.py  setup-docker-credentials.sh
backend/tests/: test_sanity.py  test_todo_filters.py
web/: index.html  (+1 more)
(+144 files in other folders)
